src/objects/Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Non_Residential_Rate__c</fullName>
        <description>Non-residential rate for bill deposit of specific pay load level</description>
        <inlineHelpText>Non-residential rate for bill deposit of specific pay load level</inlineHelpText>
        <label>Non-Residential Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residential_Rate__c</fullName>
        <description>Residential rate for bill deposit of specific pay load level</description>
        <inlineHelpText>Residential rate for bill deposit of specific pay load level</inlineHelpText>
        <label>Residential Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_Decsription__c</fullName>
        <description>Description of bill deposit schedule</description>
        <inlineHelpText>Description of bill deposit schedule</inlineHelpText>
        <label>Schedule Decsription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Selector__c</fullName>
        <label>Schedule Selector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S-1</fullName>
                </value>
                <value>
                    <fullName>S-2</fullName>
                </value>
                <value>
                    <fullName>S-3</fullName>
                </value>
                <value>
                    <fullName>S-4</fullName>
                </value>
                <value>
                    <fullName>S-5</fullName>
                </value>
                <value>
                    <fullName>S-6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deposit Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Residential_Rate__c</columns>
        <columns>Non_Residential_Rate__c</columns>
        <columns>Schedule_Decsription__c</columns>
        <columns>Schedule_Selector__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>